# logo-detector

./: .gitignore  README.rst  app.py  pyproject.toml
logo_detector/: clipper.py  config.py  detector.py  views.py
tests/: test_logo_detector.py
